--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchen Vault - The Black Book</title>
-    <!-- 使用相對路徑確保在 GitHub Pages 子路徑下正常 -->
+    
+    <!-- PWA Settings -->
+    <meta name="theme-color" content="#5C5C78">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="book.svg">
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Assets -->
     <link rel="icon" type="image/svg+xml" href="book.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,13 +46,6 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
-        .card-shadow {
-            box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.05);
-        }
-        .arch-card {
-            border-top-left-radius: 100px;
-            border-top-right-radius: 100px;
-        }
         @keyframes shake {
             0%, 100% { transform: translateX(0); }
             20%, 60% { transform: translateX(-10px); }
@@ -57,17 +58,18 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <!-- 必須引入 index.tsx 才會執行 React 渲染 -->
+    <!-- Vite 模式下，直接引入相對路徑的 TSX 即可 -->
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
