新增食譜及名稱字型更改為思源宋體

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -23,14 +22,14 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inconsolata', 'sans-serif'],
-              serif: ['Playfair Display', 'serif'],
+              serif: ['Noto Serif TC', 'serif'],
             },
             boxShadow: {
               'mystic': '0 20px 50px -12px rgba(92, 92, 120, 0.15)',
