--- a/index.html
+++ b/index.html
@@ -15,31 +15,26 @@
     <!-- Assets -->
     <link rel="icon" type="image/svg+xml" href="book.svg">
     
-    <!-- Google Identity Services SDK -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Permissions Policy -->
+    <meta http-equiv="Permissions-Policy" content="browsing-topics=(), join-ad-interest-group=(), run-ad-auction=()">
 
     <!-- Tailwind Play CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700&family=Playfair+Display:wght@700&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Inconsolata', 'monospace'],
+              sans: ['Inconsolata', 'sans-serif'],
               serif: ['Noto Serif TC', 'serif'],
-              display: ['Playfair Display', 'serif'],
             },
             boxShadow: {
               'mystic': '0 20px 50px -12px rgba(92, 92, 120, 0.15)',
               'glass': '0 8px 32px 0 rgba(31, 38, 135, 0.07)',
-            },
-            letterSpacing: {
-              'fine': '0.1em',
-              'tight-info': '0.02em',
             }
           }
         }
@@ -47,10 +42,11 @@
     </script>
     <style>
         body {
-            font-family: 'Inconsolata', monospace;
-            background-color: #FDFBF7;
+            font-family: 'Inconsolata', sans-serif;
+            background-color: #F3F1E8;
             color: #1A1A1A;
             overflow-x: hidden;
+            letter-spacing: -0.01em;
             overscroll-behavior-y: none;
         }
         .hide-scrollbar::-webkit-scrollbar {
@@ -68,6 +64,7 @@
         .animate-shake {
             animation: shake 0.4s ease-in-out;
         }
+        /* 搜尋高亮樣式 */
         mark.search-highlight {
             background-color: #FFD666;
             color: #1A1A1A;
